Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0 RC 1, 5.2.0 RC1
-
None
-
0549a4b6f52e6929daec4b0c97df2085739bc719 (xcb), 76ce3e6419f9b816359c0995ac7f1828e9291d7e
Description
QWidget::setWindowOpacity don't work
Attachments
Issue Links
- relates to
-
QTBUG-32739 Qt 5.1.0 transparent Windows form errors
-
- Closed
-
For Gerrit Dashboard: QTBUG-28477 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
42515,1 | Made QWidget::setWindowOpacity work with the XCB platform plugin. | stable | qt/qtbase | Status: MERGED | +2 | 0 |
42632,1 | Fix QWidget::setWindowOpacity() when called before show(). | stable | qt/qtbase | Status: MERGED | +2 | 0 |