Made QWidget::setWindowOpacity work with the XCB platform plugin.

Ported the rather trivial implementation from Qt 4.

Task-number: QTBUG-28477
Change-Id: I44e14a3c150af43c6b9b880242b655fe06084fd7
Reviewed-by: Lars Knoll <lars.knoll@digia.com>
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>