src/plugins/platforms/xcb/qxcbwindow.h
@@ -109,6 +109,8 @@ public:
 
     bool startSystemResize(const QPoint &pos, Qt::Corner corner);
 
+    void setOpacity(qreal level);
+
 #if !defined(QT_NO_SHAPE)
     void setMask(const QRegion &region);
 #endif // !QT_NO_SHAPE
